fix(a11y): add h1 heading

--- a/contato.html
+++ b/contato.html
@@ -36,6 +36,7 @@
     </header>
 
     <main class="container">
+        <h1 class="visually-hidden">Contato</h1>
         <section class="panel">
             <h2>Entre em Contato</h2>
             <p>Utilize o formulário abaixo para nos enviar uma mensagem. Responderemos o mais breve possível!</p>
