--- a/sobre.html
+++ b/sobre.html
@@ -37,6 +37,7 @@
     </header>
 
     <main class="container">
+        <h1 class="visually-hidden">Sobre</h1>
         <section class="panel">
             <h2>Sobre</h2>
             <div class="about-container">
