--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </header>
 
     <main class="container">
+        <h1 class="visually-hidden">Início</h1>
         <section class="card" id="passwords">
             <div class="icon">
                 <i class="fas fa-lock"></i>
