fix(seo): add full url in og:image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cartilha de Cibersegurança - Você está protegido?</title>
     <meta property="og:title" content="Cartilha de Cibersegurança - Você está protegido?">
     <meta property="og:description" content="Projeto de Curricularização: Cartilha de Segurança da Informação por Adrian Cerbaro">
-    <meta property="og:image" content="img/logo.png">
+    <meta property="og:image" content="https://cerbaro.dev/cartilha-de-ciberseguranca-upf/img/logo.png">
     <meta property="og:type" content="website">
     <meta name="description" content="Projeto de Curricularização: Cartilha de Segurança da Informação por Adrian Cerbaro">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/32.png">
