fix: update copyright year and use img tag in about page

--- a/sobre.html
+++ b/sobre.html
@@ -42,7 +42,7 @@
             <h2>Sobre</h2>
             <div class="about-container">
                 <div class="about-image">
-                    <!-- <img src="img/me.png" alt="Adrian Cerbaro"> -->
+                    <img src="img/me.png" alt="Adrian Cerbaro">
                 </div>
                 <div class="about-text">
                     <p>Olá! Eu sou <strong>Adrian Cerbaro</strong>, um Engenheiro de Software Full-Stack apaixonado por criar soluções impactantes por meio da programação.</p>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Adrian Cerbaro - Todos os direitos reservados</p>
+        <p>© 2025 Adrian Cerbaro - Todos os direitos reservados</p>
         <a href="https://github.com/adrianbrs/cartilha-de-ciberseguranca-upf" target="_blank" rel="noopener noreferrer" class="footer-link">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="M5 2H9V4H7V6H5V2Z"/>
